feat(auth): move Keycloak login request from frontend api gateway, reorganize docker-compose